--- a/src/lang/auth.json
+++ b/src/lang/auth.json
@@ -1,8 +1,12 @@
 {
   "signIn": "Ingresá",
+  "welcome": "Bienvenido",
   "signUp": "Registrarse",
   "email": "E-mail",
+  "emailPlaceholder": "Escribí tu correo",
   "username": "Usuario",
   "password": "Contraseña",
-  "login": "Ingresar"
+  "passwordPlaceholder": "Escribí tu contraseña",
+  "login": "Ingresar",
+  "loginLegend": "Debes iniciar sesión para ver la magia"
 }
