--- a/src/lang/auth.json
+++ b/src/lang/auth.json
@@ -8,5 +8,6 @@
   "password": "Contraseña",
   "passwordPlaceholder": "Escribí tu contraseña",
   "login": "Ingresar",
+  "comingOut": "Saliendo...",
   "loginLegend": "Debes iniciar sesión para ver la magia"
 }
