--- a/src/lang/auth.json
+++ b/src/lang/auth.json
@@ -2,6 +2,7 @@
   "signIn": "Ingresá",
   "welcome": "Bienvenido",
   "signUp": "Registrarse",
+  "signOut": "Salir",
   "email": "E-mail",
   "emailPlaceholder": "Escribí tu correo",
   "username": "Usuario",
