--- a/src/lang/common.json
+++ b/src/lang/common.json
@@ -5,5 +5,6 @@
   "world": "mundo",
   "director": "director",
   "pm": "pm",
-  "developer": "developer"
+  "developer": "developer",
+  "viewMore": "Ver más"
 }
